# sgct

./: CMakeLists.txt
config/: geomar_minimal_devPC_sgctPure.xml  playground.xml  single.xml
include/sgct/: ClusterManager.h  SGCTMpcdi.h  Viewport.h
lib/msvc16/: merge_libs.bat.in
src/apps/: CMakeLists.txt
src/apps/calibrator/correction_mesh_mpcdi_unpacked/: mpcdi1_.xml  surface1.pfm
src/apps/heightMappingExample/: main.cpp
src/apps/heightMappingExample_opengl3/: main.cpp
src/apps/simpleNavigationExample/: main.cpp
src/sgct/: ClusterManager.cpp  CorrectionMesh.cpp  Engine.cpp  NetworkManager.cpp  SGCTMpcdi.cpp  Viewport.cpp
